--- a/index.html
+++ b/index.html
@@ -3,6 +3,28 @@
     <head>
         <meta charset="utf-8">
         <title>CKEditor 5 Framework – Quick start</title>
+        <style>
+            .simple-box {
+                padding: 10px;
+                margin: 1em 0;
+
+                background: rgba( 0, 0, 0, 0.1 );
+                border: solid 1px hsl(0, 0%, 77%);
+                border-radius: 2px;
+            }
+
+            .simple-box-title, .simple-box-description {
+                padding: 10px;
+                margin: 0;
+
+                background: #FFF;
+                border: solid 1px hsl(0, 0%, 77%);
+            }
+
+            .simple-box-title {
+                margin-bottom: 10px;
+            }
+        </style>
     </head>
     <body>
         <div id="editor">
