Block Widget : Add sample HTML into the editor area to verify

--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
             <figure class="image">
                 <img src="https://via.placeholder.com/1000x300/02c7cd/fff?text=Placeholder%20image" alt="CKEditor 5 rocks!">
             </figure>
+
+
+            <p>This is a simple box:</p>
+
+            <section class="simple-box">
+                <h1 class="simple-box-title">Box title</h1>
+                <div class="simple-box-description">
+                    <p>The description goes here.</p>
+                    <ul>
+                        <li>It can contain lists,</li>
+                        <li>and other block elements like headings.</li>
+                    </ul>
+                </div>
+            </section>
         </div>
 
         <script src="dist/bundle.js"></script>
