text area as inline editor

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         <script src="/Users/vinay.thallam/learning/email_template_builder/node_modules/ckeditor/ckeditor.js"></script>
         <!-- <script src="dist/bundle.js"></script> -->
         <script>
-            window.CKEDITOR.replace( 'ck4' )            
+            // window.CKEDITOR.replace( 'ck4' )         
+            CKEDITOR.inline('ck4')   
         </script>
         <br/>
         <br/>
