in page configuration, other option is using custom config file using customConfig property

--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
         <script src="/Users/vinay.thallam/learning/email_template_builder/node_modules/ckeditor/ckeditor.js"></script>
         <!-- <script src="dist/bundle.js"></script> -->
         <script>
-            // window.CKEDITOR.replace( 'ck4' )         
-            CKEDITOR.inline('ck4')   
+            // CKEDITOR.inline('ck4')   
+            window.CKEDITOR.replace( 'ck4', {
+                language: 'fr',
+                uiColor: '#9AB8F3'
+            } )         
         </script>
         <br/>
         <br/>
