ACF - Advanced Content Filtering Examples

--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
             // CKEDITOR.inline('ck4')   
             window.CKEDITOR.replace( 'ck4', {
                 language: 'fr',
-                uiColor: '#9AB8F3'
+                uiColor: '#9AB8F3',
+                // allowedContent: true,
+                // allowedContent: 'u em strong ul li;a[!href,target]',
+                // extraAllowedContent: 'dl dt dd',
+                // disallowedContent: 'img{border*}'
             } )         
         </script>
         <br/>
