this tag will disapper in the editor since abbreviation plauign is not integarted with acf

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
         <h3>CK Editor 4 - Classic</h3>
         <textarea name="ck4" id="ck4" rows="10" cols="80">
             This is my textarea to be replaced with CKEditor 4.
+
+            <abbr title="Hyper text Markup Language" id="myid">HTML</abbr>
         </textarea>
         <script src="/Users/vinay.thallam/learning/email_template_builder/node_modules/ckeditor/ckeditor.js"></script>
         <!-- <script src="dist/bundle.js"></script> -->
