notes on applying plugin styles

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             }
         </style>
 
+        <!--    Provide style sheet like this to work in inline plugin and target HTML page-->
         <link rel="stylesheet" href="/Users/vinay.thallam/learning/email_template_builder/node_modules/ckeditor/plugins/timestamp/styles/timestamp.css" />
     </head>
     <body>
