widget styles for inline editor

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 
         <!--    Provide style sheet like this to work in inline plugin and target HTML page-->
         <link rel="stylesheet" href="/Users/vinay.thallam/learning/email_template_builder/node_modules/ckeditor/plugins/timestamp/styles/timestamp.css" />
+        <link rel="stylesheet" href="/Users/vinay.thallam/learning/email_template_builder/node_modules/ckeditor/plugins/simplebox/styles/simplebox.css" />
+        
     </head>
     <body>
         <h3>CK Editor 5</h3>
