extraAllowedContent config since widget was not working and make simplebox a widget

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                 language: 'fr',
                 uiColor: '#9AB8F3',
                 extraPlugins: 'timestamp, abbr, simplebox',
+                extraAllowedContent: 'div(!simplebox); div(!simplebox-content); h2(!simplebox-title)'
                 // allowedContent: true,
                 // allowedContent: 'u em strong ul li;a[!href,target]',
                 // extraAllowedContent: 'dl dt dd',
