register the widget, extraAllowedContent not needed

--- a/ck4.html
+++ b/ck4.html
@@ -23,8 +23,7 @@
             var editor = window.CKEDITOR.replace( 'ck4', {
                 language: 'fr',
                 uiColor: '#9AB8F3',
-                extraPlugins: 'timestamp, abbr, simplebox',
-                extraAllowedContent: 'div(!simplebox,align-left,align-right,align-center){width}; div(!simplebox-content); h2(!simplebox-title)'
+                extraPlugins: 'timestamp, abbr, simplebox, placeholder',
                 // allowedContent: true,
                 // allowedContent: 'u em strong ul li;a[!href,target]',
                 // extraAllowedContent: 'dl dt dd',
